--- a/BaigiamasisProjektas/src/main/resources/application.properties
+++ b/BaigiamasisProjektas/src/main/resources/application.properties
@@ -1,1 +1,28 @@
+#Database MySQL
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
+spring.datasource.username=root
+spring.datasource.password=xyz15wc56
 
+#Jpa/Hibernate
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
+
+#Spring-Mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=calendrier.calendarium@gmail.com
+spring.mail.password=ckzibkgpoaxnnlex
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#Quartz
+spring.quartz.job-store-type = jdbc
+spring.quartz.properties.org.quartz.threadPool.threadCount = 5
+
+
+#H2 settings
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
